# sample_py_packages

./: .gitignore
PDM/: pyproject.toml
pipenv/: setup.cfg
pipenv/src/example/: example.py
poetry/: pyproject.toml
