[project]
name = ""
version = ""
description = ""
authors = [
    {name = "caiobran", email = "caiobran88@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
